--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.4",
     "@react-aria/i18n": "^3.12.7",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
     "@shadcn/ui": "^0.0.4",
     "@tabler/icons-react": "^3.31.0",
     "@tanstack/react-query": "^4.36.1",
@@ -45,6 +47,8 @@
     "sass": "^1.85.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.174.0",
+    "three-globe": "^2.42.2",
     "ts-md5": "^1.3.1",
     "zod": "^3.24.1",
     "zustand": "^5.0.3"
