--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-hook-form": "^7.54.2",
     "react-syntax-highlighter": "^15.6.1",
     "sass": "^1.85.1",
+    "swiper": "^11.2.6",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.174.0",
