--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-table": "^8.20.6",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@uidotdev/usehooks": "^2.4.1",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
