--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "next-intl": "^4.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.54.2",
     "react-syntax-highlighter": "^15.6.1",
     "sass": "^1.85.1",
